# gccsdk

./: .gitignore  README  setup-gccsdk-params
joty/asasm-re2c-lemon/: Makefile
joty/asasm-re2c-lemon/asasm/: ChangeLog.re2c-lemon  configure.ac
joty/asasm-re2c-lemon/asasm/src/: Makefile.am  expr-parser-part1.c  expr-parser-part2.y  expr-parser-part3.c  expr-parser.c  expr-parser.h  expr-scanner.h  expr-scanner.re  lempar.c.template
joty/asasm-re2c-lemon/lemon/: ChangeLog  Makefile  README
joty/asasm-re2c-lemon/lemon/current/: COPYING  ChangeLog  Makefile.am  configure.ac  lempar.c
joty/asasm-re2c-lemon/re2c/: ChangeLog  Makefile  README
joty/asasm-re2c-lemon/re2c/upstream/bootstrap/: parser.cc  y.tab.h
joty/asasm-twopass/: local.h
joty/gcc47/recipe/patches/gcc/: gcc.config.arm.arm.c.p
joty/gcc48/: Makefile  README  STATUS-BRANCH  setup-gccsdk-params
joty/gcc48/recipe/patches/gcc/: configure.ac.p  gcc.ada.env.c.p  gcc.ada.gcc-interface.Makefile.in.p  gcc.ada.raise-gcc.c.p  gcc.collect2.c.p  gcc.config.arm.arm-protos.h.p  gcc.config.arm.arm.c.p  gcc.config.arm.arm.h.p  gcc.config.arm.arm.md.p  gcc.config.gcc.p  gcc.config.host.p  gcc.defaults.h.p  gcc.doc.invoke.texi.p  gcc.dwarf2cfi.c.p  gcc.dwarf2out.c.p  gcc.gcc.c.p  gcc.ira.c.p  gcc.toplev.c.p  libgcc.config.host.p  libjava.configure.ac.p  libstdc++-v3.acinclude.m4.p  libstdc++-v3.configure.ac.p  libstdc++-v3.crossconfig.m4.p  libstdc++-v3.src.Makefile.am.p  libstdc++-v3.src.c++98.Makefile.am.p  libtool.m4.p
joty/llvm/: Makefile
joty/llvm/recipe/patches/libunixlib/: Makefile.am.p  gmon.gmon-start.c.p  sys._syslib.s.p
joty/llvm/recipe/patches/svn-llvm-clang/: tools.clang.tools.driver.driver.cpp.p
joty/llvm/recipe/patches/svn-llvm-gcc/: configure.in.p  gcc.Makefile.in.p
joty/llvm/scripts/: do-softlink-dir
recipe/patches/: gcc.version.c.p
